--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,7 +2,7 @@ repos:
   - repo: https://github.com/PyCQA/bandit #checks for security vulnerabilities
     rev: 1.7.5
     hooks:
-      - id: bandit #
+      - id: bandit
         args: [--exit-zero]
         # ignore all tests, not just tests data
         exclude: ^tests/
