--- a/.github/workflows/get_version.yml
+++ b/.github/workflows/get_version.yml
@@ -10,8 +10,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: set up git
-        uses: actions/setup-git@v2
+      - name: checkout repo
+        uses: actions/checkout@v2
 
       - name: install jq
         run: |
