--- a/.github/workflows/Docker_Image.yml
+++ b/.github/workflows/Docker_Image.yml
@@ -43,9 +43,32 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Get the current date
-        id: date
-        run: echo "::set-output name=date::$(date +%Y%m%d)"
+      # - name: Get the current date
+      #   id: date
+      #   run: echo "::set-output name=date::$(date +%Y%m%d)"
+
+      - name: install jq
+        run: |
+          sudo apt-get update -y
+          sudo apt-get install jq -y
+
+      - name: get latest version of siepic ebeam pdk and siepic tools
+        id: get-version
+        run: |
+          # Get the latest release version from the target repository
+          EBEAM_PDK=$(curl -s -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+            "https://api.github.com/repos/SiEPIC/SiEPIC_EBeam_PDK/releases/latest" \
+            | jq -r .tag_name)
+          
+          TOOLS=$(curl -s -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+            "https://api.github.com/repos/SiEPIC/SiEPIC-Tools/releases/latest" \
+            | jq -r .tag_name)
+
+          echo "EBEAM_PDK=$EBEAM_PDK" >> $GITHUB_ENV
+          echo "TOOLS=$TOOLS" >> $GITHUB_ENV
+
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         
       - name: Log in to the container registry
         uses: docker/login-action@65b78e6e13532edd9afa3aa52ac7964289d1a9c1
@@ -73,5 +96,5 @@ jobs:
         with:
           context: .
           push: true
-          tags: "${{ steps.meta.outputs.tags }}.${{ steps.date.outputs.date }}.${{ github.run_number }}"
+          tags: "${{ steps.meta.outputs.tags }}.${{ steps.get-version.EBEAM_PDK }}.${{ steps.get-version.TOOLS }}"
           labels: ${{ steps.meta.outputs.labels }}
