--- a/.github/workflows/Docker_Image.yml
+++ b/.github/workflows/Docker_Image.yml
@@ -82,20 +82,14 @@ jobs:
         id: meta
         uses: docker/metadata-action@9ec57ed1fcdbf14dcef7dfbe97b2010124a938b7
         with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-          
-      # - name: Build and push Docker image as latest image
-      #   run: docker/build-push-action@f2a1d5e99d037542a71f64918e516c093c6f3fc4 --push --tags latest --labels ${{ steps.meta.outputs.labels }}
-
-      # - name: Build and push Docker image as unique image
-      #   run: docker/build-push-action@f2a1d5e99d037542a71f64918e516c093c6f3fc4 --push --tags "${{ github.ref_slug }}${EBEAM_PDK}.${TOOLS}" --labels ${{ steps.meta.outputs.labels }}    
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }} 
 
       - name: Build and push Docker image as latest image
         uses: docker/build-push-action@f2a1d5e99d037542a71f64918e516c093c6f3fc4
         with:
           context: .
           push: true
-          tags: "latest,${{ github.ref_slug }}"
+          tags: ${{ steps.meta.outputs.tags }}-latest
           labels: ${{ steps.meta.outputs.labels }}
 
       - name: Build and push Docker image as unique image
@@ -103,5 +97,5 @@ jobs:
         with:
           context: .
           push: true
-          tags: "${{ github.ref_slug }}${EBEAM_PDK}.${TOOLS}"
+          tags: "${{ steps.meta.outputs.tags }}.${{ steps.date.outputs.date }}.${{ github.run_number }}"
           labels: ${{ steps.meta.outputs.labels }}
