--- a/.github/workflows/Docker_Image.yml
+++ b/.github/workflows/Docker_Image.yml
@@ -89,7 +89,7 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{ steps.meta.outputs.tags }}-latest-${EBEAM_PDK}
+          tags: ${{ steps.meta.outputs.tags }}-latest-"$EBEAM_PDK"
           labels: ${{ steps.meta.outputs.labels }}
 
       - name: Build and push Docker image as unique image
