--- a/.github/workflows/Docker_Image.yml
+++ b/.github/workflows/Docker_Image.yml
@@ -52,21 +52,32 @@ jobs:
           sudo apt-get update -y
           sudo apt-get install jq -y
 
-      - name: get latest version of siepic ebeam pdk and siepic tools
-        id: get-version
+      - name: get latest version of siepic ebeam pdk 
+        id: ebeampdk
         run: |
-          # Get the latest release version from the target repository
           EBEAM_PDK=$(curl -s -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
             "https://api.github.com/repos/SiEPIC/SiEPIC_EBeam_PDK/releases/latest" \
             | jq -r .tag_name)
-          
-          TOOLS=$(curl -s -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+
+          echo "$EBEAM_PDK"
+          #echo "EBEAM_PDK=$EBEAM_PDK" >> $GITHUB_ENV
+
+          echo "::set-output name=ebeampdk::${EBEAM_PDK}"
+
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      
+      - name: get latest version of siepic tools
+        id: siepictools
+        run: |
+          SIEPIC_TOOLS=$(curl -s -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
             "https://api.github.com/repos/SiEPIC/SiEPIC-Tools/releases/latest" \
             | jq -r .tag_name)
 
-          echo "$EBEAM_PDK, $TOOLS"
-          echo "EBEAM_PDK=$EBEAM_PDK" >> $GITHUB_ENV
-          echo "TOOLS=$TOOLS" >> $GITHUB_ENV
+          echo "$TOOLS"
+          #echo "TOOLS=$TOOLS" >> $GITHUB_ENV
+
+          echo "::set-output name=siepictools::${SIEPIC_TOOLS}"
 
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -89,7 +100,7 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{ steps.meta.outputs.tags }}-latest-"$EBEAM_PDK"
+          tags: ${{ steps.meta.outputs.tags }}-latest
           labels: ${{ steps.meta.outputs.labels }}
 
       - name: Build and push Docker image as unique image
@@ -97,5 +108,5 @@ jobs:
         with:
           context: .
           push: true
-          tags: "${{ steps.meta.outputs.tags }}.${{ steps.date.outputs.date }}.${{ github.run_number }}"
+          tags: "${{ steps.meta.outputs.tags }}.${{ steps.ebeampdk.outputs.ebeampdk }}.${{ steps.siepictools.outputs.siepictools}}"
           labels: ${{ steps.meta.outputs.labels }}
