--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,8 +7,7 @@ repos:
         # ignore all tests, not just tests data
         exclude: ^tests/
 
-  - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v3.4.0
+  - repo: https://github.com/psf/black
+    rev: 23.12.0
     hooks:
-      - id: trailing-whitespace
-      - id: end-of-file-fixer
+      - id: black
