--- a/.github/workflows/EBeam_Tests.yml
+++ b/.github/workflows/EBeam_Tests.yml
@@ -29,7 +29,7 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Pull siepic_klayout image
-        run: docker pull ghcr.io/siepic/siepic_ebeam_pdk/siepic_klayout:master-latest
+        run: docker pull ghcr.io/farihais/siepic_klayout:latest
      
       - name: Run docker container from image
         run: docker run -itd --name ebeam_test -e DISPLAY -v /tmp/.X11-unix:/tmp/.X11-unix --security-opt label=type:container_runtime_t ghcr.io/siepic/siepic_ebeam_pdk/siepic_klayout:master-latest
