--- a/.github/workflows/EBeam_Tests.yml
+++ b/.github/workflows/EBeam_Tests.yml
@@ -75,8 +75,10 @@ jobs:
           fi
 
       
-      - name: Run KLayout Python script inside container and capture exit code
-        run: docker exec ebeam_test klayout -zz -r pymacros/EBeam_Lib_PCellTests.py || echo "KLAYOUT_EXIT_CODE=$?" >> $GITHUB_ENV
+      - name: Print KLayout version and run KLayout Python script inside container to capture exit code
+        run: |
+                docker exec ebeam_test klayout --version
+                docker exec ebeam_test klayout -zz -r pymacros/EBeam_Lib_PCellTests.py || echo "KLAYOUT_EXIT_CODE=$?" >> $GITHUB_ENV
         continue-on-error: true
 
       - name: Stop container and remove it 
