--- a/.github/workflows/Docker_Image.yml
+++ b/.github/workflows/Docker_Image.yml
@@ -24,7 +24,7 @@ jobs:
   
     runs-on: ubuntu-latest
     permissions:
-      contents: read
+      #contents: read
       packages: write
       
     steps:
