--- a/.github/workflows/Docker_Image.yml
+++ b/.github/workflows/Docker_Image.yml
@@ -36,6 +36,8 @@ jobs:
 
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
         
       - name: install jq
         run: |
@@ -76,12 +78,12 @@ jobs:
 
           # set table variable
           TABLE=$(cat <<EOF
-          | Tool                 |               Version                      |
-          | -------------------- | --------------------------------------     |  
+          | Tool                 | Version         |
+          | -------------------- | --------------- |  
           | SiEPIC EBeam PDK     |   $(echo "${{ steps.ebeampdk.outputs.ebeampdk }}") |
           | SiEPIC Tools         |   $(echo "${{ steps.siepictools.outputs.siepictools }}") |
-          | KLayout              |   0.28.13                                  |
-          | Python               | `<python>`                                 |
+          | KLayout              |   0.28.13  |
+          | Python               | `<python>` |
           EOF
           )
 
